[package]
name = "lv2-bundle"
version = "0.1.0"
description = "A library for reading LV2 bundle RDF data into a data structure that can be more easily processed in Rust."
authors = ["Allen Marshall <allen.marshall.22@gmail.com>"]
edition = "2018"
keywords = ["lv2"]
categories = ["parser-implementations"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/allen-marshall/scriptaseq"

[badges]
travis-ci = { repository = "allen-marshall/lv2-bundle-rs" }
coveralls = { repository = "allen-marshall/lv2-bundle-rs", service = "github" }
is-it-maintained-issue-resolution = { repository = "allen-marshall/lv2-bundle-rs" }
is-it-maintained-open-issues = { repository = "allen-marshall/lv2-bundle-rs" }
maintenance = { status = "experimental" }

[dependencies]
